changed date of next meetup

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ int main(int argc, char * argv)
 
 
 		<footer>
-<i>next meetup</i> &#160;&#160; Feb 7, 2013 / The Network Hub, Vancouver
+<i>next meetup</i> &#160;&#160; March 27, 2013 / Harbour Centre, Vancouver
 <img src="i/map_pin.png" />
 		</footer>
 	</body>
