--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
 
 		<section class="page">
 			<p>
+				The next <em>machine learning group</em> meetup will be on Wednesday March 27, 2013 at Harbour Centre (Plenty of Fish office) at
+				#2550 - 555 West Hastings Street, Vancouver, BC.
+			</p>
+			<p>
+				A talk will be given by <a href="http://donturn.com/">Don Turnbull</a> (@<a href="https://twitter.com/donturn">donturn</a>).
+				Don will discuss Data Science.
+			</p>
+
+<!--
+			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <a href="">eiusmod tempor</a> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 			<p>
@@ -101,7 +111,7 @@ int main(int argc, char * argv)
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
-
+-->
 
 
 		</section> <!-- class="page" -->
