--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
 
 
 		<section class="breadcrumbs">
+			Home
+<!--
 			<a href="">Home</a>
 			&#8827;
 			<a href="">Join</a>
 			&#8827;
 			Meetup
+--?
 		</section> <!-- class="breadcrumbs" -->
 
 		<section class="subheader">
