added link to 2013-03-27 talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -57,7 +57,11 @@
 		</section>
 
 		<section class="page">
-
+			<ul>
+				<li>
+					<a href="./2013-03-27/">2013-03-27</a>
+				</li>
+			</ul>
 
 <!--
 			<p>
