added more to intro presentation

--- a/talks/2013-03-27/index.html
+++ b/talks/2013-03-27/index.html
@@ -64,7 +64,18 @@
 					</p>
 					<br />
 					<p>
-						Come talk to me <a href="http://changelog.ca/">Charles</a> / <a href="http://twitter.com/reiver">@reiver</a></small>
+						Come talk to <a href="http://changelog.ca/">Charles</a> / <a href="http://twitter.com/reiver">@reiver</a></small>
+					</p>
+				</section>
+
+				<section>
+					<h2>More Ways To Get Involved!</h2>
+					<p>
+						There are other ways to get involved with the Machine Learning group or Data Science group.
+					</p>
+					<br />
+					<p>
+						Want to get involved, come talk to <a href="http://changelog.ca/">Charles</a> / <a href="http://twitter.com/reiver">@reiver</a></small>
 					</p>
 				</section>
 
