--- a/talks/2013-03-27/index.html
+++ b/talks/2013-03-27/index.html
@@ -71,7 +71,7 @@
 				<section>
 					<h2>More Ways To Get Involved!</h2>
 					<p>
-						There are other ways to get involved with the Machine Learning group or Data Science group.
+						There are other ways to get involved with the Machine Learning group and Data Science group.
 					</p>
 					<br />
 					<p>
